SERVER-84369 Avoid auto-parameterizing the infinity value in a query (#17867)

(cherry picked from commit 99853e7a9c71d793b5b3c5028e322bf0215d2697)